<resources>
    <string name="app_name">HarryPotterWiki</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="characters">Characters</string>
    <string name="spells">Spells</string>
    <string name="houses">Houses</string>
    <string name="something_went_wrong">Something went wrong... :(</string>
    <string name="house">House</string>
    <string name="gender">Gender</string>
    <string name="birth">Birth</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>