<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_characters">

    <fragment
        android:id="@+id/navigation_characters"
        android:name="com.x1oto.harrypotterwiki.presentation.view.characters.CharactersFragment"
        android:label="@string/characters"
        tools:layout="@layout/fragment_characters" >
        <action
            android:id="@+id/action_navigation_characters_to_detailedCharactersFragment"
            app:destination="@id/detailedCharactersFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_spells"
        android:name="com.x1oto.harrypotterwiki.presentation.view.spells.SpellsFragment"
        android:label="@string/spells"
        tools:layout="@layout/fragment_spells" >
        <action
            android:id="@+id/action_navigation_spells_to_detailedSpellsFragment"
            app:destination="@id/detailedSpellsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_houses"
        android:name="com.x1oto.harrypotterwiki.presentation.view.houses.HousesFragment"
        android:label="@string/houses"
        tools:layout="@layout/fragment_houses" />
    <fragment
        android:id="@+id/detailedSpellsFragment"
        android:name="com.x1oto.harrypotterwiki.presentation.view.spells.DetailedSpellsFragment"
        android:label="Explore spells"
        tools:layout="@layout/fragment_detailed_spells" >

        <argument
            android:name="spellItem"
            app:argType="com.x1oto.harrypotterwiki.data.models.spell.SpellItem" />
        <action
            android:id="@+id/action_detailedSpellsFragment_to_navigation_spells"
            app:destination="@id/navigation_spells" />
    </fragment>
    <fragment
        android:id="@+id/detailedCharactersFragment"
        android:name="com.x1oto.harrypotterwiki.presentation.view.characters.DetailedCharactersFragment"
        android:label="Explore character"
        tools:layout="@layout/fragment_detailed_characters" >
        <action
            android:id="@+id/action_detailedCharactersFragment_to_navigation_characters"
            app:destination="@id/navigation_characters" />
        <argument
            android:name="characterItem"
            app:argType="com.x1oto.harrypotterwiki.data.models.character.CharacterItem" />
    </fragment>
</navigation>
